# LUI-calculator

./: .gitignore  LICENSE  README.md  TODO.md  requirements.txt  requirements_dev.txt  setup.cfg  test.py  tox.ini
src/calculator/: __init__.py  complement.py  core.py  plot.py
src/lui_calculator/: complements.py  core.py
tests/: test_calculator.py
