[metadata]
name = calculator
description = powerful calculator from strings with sympy
author = NiniKo
version = 1.0.0
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    calculator
install_requires =
    sympy>=1.0
    requests>=2.0
    types-requests>=2.25
    numpy>=1.21
    matplotlib>=3.4
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
calculator = py.typed

[flake8]
max-line-length = 160
