[metadata]
name = calculator
description = powerful calculator from strings with sympy
author = NiniKo
version = 1.0.0
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    calculator
install_requires =
    sympy>=1.11
    requests>=2.28
    types-requests>=2.28
    numpy>=1.23
    matplotlib>=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=4.0
    mypy>=0.982
    flake8>=5.0
    tox>=3.27

[options.package_data]
calculator = py.typed

[flake8]
max-line-length = 160
